[project]
name = "python-playground"
version = "0.1.0"
description = "Python playground"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "furo>=2025.12.19",
    "mypy>=1.19.1",
    "pytest-randomly>=4.0.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2025.12.21.14",
    "sphinx>=8.1.3",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
show_error_codes = true
strict = true

[tool.pytest.ini_options]
addopts = ["--strict-markers", "-ra"]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["COM812", "D107", "PLR0913"]
select = ["ALL"]

[tool.ruff.lint.flake8-import-conventions.aliases]
typing_extensions = "t"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
strict = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["F403", "F405", "INP001"]
"tests/**" = ["D", "S", "SLF"]
